--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.19.7",
-    "@astrojs/rss": "^2.4.3",
-    "@astrojs/sitemap": "^1.3.3",
-    "astro": "^2.7.2"
+    "@astrojs/mdx": "^3.1.2",
+    "@astrojs/rss": "^4.0.7",
+    "@astrojs/sitemap": "^3.1.6",
+    "astro": "^4.11.6"
   },
   "devDependencies": {
-    "prettier": "^2.8.8",
-    "prettier-plugin-astro": "^0.10.0"
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "vite": "^5.3.4"
   }
 }
